# poetry-package-demo

./: .pre-commit-config.yml  pyproject.toml  tox.ini
.github/workflows/: tests.yaml
