[tool.poetry]
name = "pkg-name"
version = "0.1.0"
description = ""
authors = ["David R. Lores <d.r.lores.sci@gamil.com>"]
readme = "README.md"
packages = [{include = "pkg_name", from = "src"}]


[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
tox = "^4.11.3"
sphinx = "^6.0.0"
black = "^23.9.1"
pre-commit = "^3.4.0"
mypy = "^1.5.1"
flake8-pyproject = "^1.2.3"
flake8 = "^5.0.0"


[tool.black]
line-length = 120


[tool.isort]
profile = "black"
line_length = 160
extra_standard_library = ["pytest"]


[tool.mypy]
ignore_missing_imports = true


[tool.flake8]
max-line-length = 160
exclude = [
    # No need to traverse our git directory
    ".git",
    # There's no value in checking cache directories
    "__pycache__",
    # No need to check __init__.py
    "__init__.py"
]
# Use extend-ignore to add to already ignored checks which are anti-patterns like W503.
extend-ignore = [
    # PEP 8 recommends to treat : in slices as a binary operator with the lowest priority, and to leave an equal
    # amount of space on either side, except if a parameter is omitted (e.g. ham[1 + 1 :]).
    # This behaviour may raise E203 whitespace before ':' warnings in style guide enforcement tools like Flake8.
    # Since E203 is not PEP 8 compliant, we tell Flake8 to ignore this warning.
    # https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#slices    
    "E203"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
